--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/MyNewMap.MyNewMap
 GameDefaultMap=/Game/MyNewMap.MyNewMap
-GlobalDefaultGameMode=/Script/escape_room.escape_roomGameModeBase
+GlobalDefaultGameMode=/Game/BuildigEscapeGameMode_BP.BuildigEscapeGameMode_BP_C
 GlobalDefaultServerGameMode=/Script/escape_room.escape_roomGameModeBase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -56,3 +56,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
